--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Italianno&family=Roboto+Mono&family=Roboto:ital,wght@1,300&display=swap');
 
+*{
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+body {
+    background-color:  #151320;
+    height: 100vh;
+    font-family: 'Roboto' sans-serif;
+}
+.cards {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(400px,1fr));
+   padding: 20px;
+   grid-gap: 40px;
+
+}
+.card{
+    background-color: #1c1b29;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+
+}
+.container {
+    position: relative;
+    clip-path: polygon(0 0,100% 0,100% 85%, 0 100%);
+}
+img {
+    width: 100%;
+    display: block;
+}
+.container:after {
+    content:"";
+    height: 100%;
+    width: 100%;
+    position:absolute;
+    top: 0;
+    left: 0;
+    border-radius: 20px 20px 0 0;
+    opacity: 0.7;
+
+}
+.details{
+    padding: 20px 10px;
+}
+.details>h3 {
+    color: aliceblue;
+    font-weight: 600;
+    font-size: 18px;
+    margin: 10px 0 15px 0;
+}
+.details>p {
+    color: #a0a0a0;
+    font-weight: 400;
+    font-size: 15px;
+    
+}
+.heroimage{
+    display: grid;
+    border-radius: 40px;
+    padding: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+}
+.heroimage h1 {
+    color: aliceblue;
+    font-size: 75px;
+    text-align: center;
+}  
+.heroimage p {
+    color:  #a0a0a0;
+    font-weight: 400;
+    font-size: 20px;
+    padding: 35px;
+}
+    
+
