--- a/css/style.css
+++ b/css/style.css
@@ -75,5 +75,47 @@ img {
     font-size: 20px;
     padding: 35px;
 }
+/*dropdown button*/
+.dropbtn {
+    background-color: #0f0f0f;
+    color:aliceblue;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    margin-left: 20px;
+}
+/*The container <div> position*/
+.dropdown {
+    position: relative;
+    display: inline-block;
     
-
+}
+/*Drropdown content*/
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color:#1c1b29 ;
+    min-height: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    margin-left: 20px;
+}
+/*Links inside the dropdown*/
+.dropdown-content a {
+    color: aliceblue;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+} 
+/*Change color of dropdown links on hover*/
+.dropdown-content a:hover {
+    background-color: #2b2941 ;
+}
+/*Show the dropdown menu on hover*/
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/*Change the background color of the dropdown button when the dropdown content is shown*/
+.dropdown:hover .dropbtn {
+    background-color:  #2b2941;
+}
