--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,30 @@ img {
 .dropdown:hover .dropbtn {
     background-color:  #2b2941;
 }
+/*map styling*/
+@font-face {
+    font-family: 'montserrat';
+    src: url('https://cdn2.civitatis.com/fonts/montserrat-light-webfont.woff2') format('woff2'),
+         url('https://cdn2.civitatis.com/fonts/montserrat-light-webfont.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+ @font-face {
+    font-family: 'guias-texts';
+    src: url('https://cdn2.civitatis.com/fonts/guias-new-texts-webfont-v2.woff2') format('woff2'),
+    url('https://cdn2.civitatis.com/fonts/guias-new-texts-webfont-v2.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+    citislug: new-york;
+}
+.a-header__logo__city:before, .a-header__logo__civitatis:before {
+    font-family: guias-texts;
+}
+.map {
+    text-align: center;
+    color:aqua;
+    background: #2b2941;
+    
+}
